# gitbare

./: .gitignore  BLUEPRINT.md  CONTEXT.md  README.md  pyproject.toml
docs/: PROJECT_RULES.md
docs/worklogs/: 2026-04-17-20-00-implement-gitbare-cli.md  2026-04-17-20-17-add-verbose-planning-logs.md  2026-04-17-20-34-add-verbose-progress-counters.md  2026-04-17-20-36-add-uv-lock-commit-rule.md  2026-04-17-20-45-stream-verbose-stderr.md  2026-04-17-20-50-skip-non-restorable-config.md  2026-04-17-21-01-readme-refactor.md  2026-04-17-21-03-readme-remove-dividers.md  2026-04-19-13-15-add-ruff-test-extra.md
scripts/: bump-version.sh  validate-worklog.sh
src/gitbare/: __init__.py  __main__.py  cli.py  exporter.py  git_ops.py  importer.py  logging_utils.py
tests/: test_gitbare.py
